# Laweb

./: .pre-commit-config.yaml  README.md  pyproject.toml
example/: app.py  routes.py
laweb/: __init__.py  enums.py  exceptions.py  logger.py  tools.py
