[tool.poetry]
name = "laweb"
version = "0.1.0"
description = "Tool for logs and alerts with web UI"
authors = ["Flict-dev <zhdanom.maksi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
